2010-09-21  MIYAMUKO Katsuyuki

	* api/types.l (public-key): public-key 構造体の key スロットの名前を body に変更。
	public-key-key => public-key-body

	* util/struct.l (struct-slot-accessor): export-struct でエラーになっていたのを修正
	スロット名をキーワードじゃなくて構造体名のシンボルが
	所属するパッケージに intern するようにした。

2010-09-06  MIYAMUKO Katsuyuki

	* api/base.l (with-credential): 一時的に github の user と token
	を切り替えるためのマクロ

	* api/base.l (refresh-credential): git config を変更した場合に
	キャッシュをクリアするための関数を追加

	* api/base.l (get-credential-login): git config の github.user を
	取得する関数を export

2010-09-03  MIYAMUKO Katsuyuki

	* utils/pubkey.l, api/base.l, api/user.l, api/repo.l: ファイルから公開鍵を登録できるようにした
	- add-repo-key-file
	- add-user-key-file
	以下の公開鍵のフォーマットをサポートする
	- RFC 4716 形式のファイル (puttygen などで生成した公開鍵)
	- OpenSSH 形式 (authorized_keys に書く形式、puttygen でも変換可能)

	* api/types.l: GitHub の URL を返す API を追加

	* user/repo => owner/repo

	* 引数の型チェックを追加

	* api/issues.l, api/types.l: 引数名を変更: number => issue

	* api/issues.l (add-issue-label, delete-issue-label): 引数の順番を変更

2010-09-02  MIYAMUKO Katsuyuki

	* user と repo 引数にとる関数の引数を変更して以下を引数に取るようにした
	- "<user>/<repo>" という文字列
	- '("<user>" "<repo>") というリスト
	- repo 構造体

	* api/issues.l, api/types.l: issue number を引数にとる関数には
	issue 構造体も指定できるようにした。

	* api/user.l, api/repo.l, api/types.l: public-key id を引数にとる関数には
	public-key 構造体も指定できるようにした。

2010-08-31  MIYAMUKO Katsuyuki

	* api/user.l, api/gist.l: ユーザ名を引数に指定する関数には
	user 構造体も指定できるようにした。

	* api/types.l: user 構造体の name を fullname に変更。
	アクセッサが ed::user-name とかぶるのを防ぐのと
	user-login と user-name の区別を付けやすくするため。

	* api/gist-unofficial.l, api/gist.l: id を引数に指定する関数には
	gist 構造体も指定できるようにした。

	* api/type.l: fork したリポジトリを show-repo するとエラーになっていたのを修正
	(repo 構造体に source と parent を追加)。

	* api/gist-unofficial.l (gist-star-p): fork 関連の API を追加
	- fork-gist
	- gist-fork-p
	- get-gist-parent
	- list-gist-forks

	* api/gist-unofficial.l (gist-star-p): star-gist-p を gist-star-p
	に変えた

2010-08-21  MIYAMUKO Katsuyuki
